--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -1039,12 +1039,12 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel2" min="-2" pref="85" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                                      <Component id="txtFieldSource" max="32767" attributes="0"/>
+                                      <Component id="txtFSource" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="labelSumBudget" min="-2" pref="85" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                                      <Component id="txtFieldSumBudget" max="32767" attributes="0"/>
+                                      <Component id="txtFSumBudget" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel4" min="-2" pref="85" max="-2" attributes="0"/>
@@ -1068,12 +1068,12 @@
                               <EmptySpace pref="59" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel2" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                                  <Component id="txtFieldSource" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                                  <Component id="txtFSource" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="labelSumBudget" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                                  <Component id="txtFieldSumBudget" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                                  <Component id="txtFSumBudget" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -1115,14 +1115,17 @@
                         <Property name="text" type="java.lang.String" value="Date : "/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txtFieldSource">
+                    <Component class="javax.swing.JTextField" name="txtFSource">
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txtFieldSumBudget">
+                    <Component class="javax.swing.JTextField" name="txtFSumBudget">
                     </Component>
                     <Component class="javax.swing.JButton" name="jButton1">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Submit"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="org.jdesktop.swingx.JXDatePicker" name="datePickerBudget">
                     </Component>
