--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -513,6 +513,9 @@
                         <Property name="horizontalAlignment" type="int" value="0"/>
                         <Property name="text" type="java.lang.String" value="$$$"/>
                       </Properties>
+                      <AuxValues>
+                        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="labelBalanceCurrency.setText(&quot;RM&quot;+getBalance());"/>
+                      </AuxValues>
                     </Component>
                   </SubComponents>
                 </Container>
