--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -446,7 +446,11 @@
                             <Column editable="true" title="Date" type="java.lang.String"/>
                           </Table>
                         </Property>
+                        <Property name="enabled" type="boolean" value="false"/>
                       </Properties>
+                      <AuxValues>
+                        <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="MainFrame_tableBudget"/>
+                      </AuxValues>
                     </Component>
                   </SubComponents>
                 </Container>
